:fix: change extenssions of codeblock

--- a/posts/02-react.mdx
+++ b/posts/02-react.mdx
@@ -13,8 +13,6 @@ author:
   image: 'https://avatars.githubusercontent.com/u/110628201?v=4'
 ---
 
-# **Uma biblioteca poderosa e versátil para construir interfaces de usuário**
-
 React é uma biblioteca JavaScript de código aberto para construir interfaces de
 usuário (IU). Ela é uma biblioteca declarativa, o que significa que você
 descreve como sua IU deve ser, e o React se encarrega de renderizá-la.
@@ -65,7 +63,7 @@ npm install react
 Depois de instalar a biblioteca, você pode criar um novo componente React usando
 a seguinte sintaxe:
 
-```javascript
+```tsx
 const MyComponent = () => {
   return (
     <div>
@@ -85,7 +83,7 @@ isso, você pode importar o componente no seu arquivo principal e usar a tag
 
 O código a seguir mostra um exemplo completo de uma aplicação web React:
 
-```javascript
+```tsx
 import React, { useState } from "react";
 
 const App = () => {
